--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,22 @@
 <body>
     <header class="navbar navbar-inverse">
       <div class="navbar-inner">
-        <div class="container">
-          <%= link_to yield(:title), '#', id: "logo" %>
+          <%= link_to yield(:title), '/', id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    '#' %></li>
+              <li><%= link_to "Home",    '/' %></li>
               <li><%= link_to "Help",    '#' %></li>
               <li><%= link_to "Sign in", '#' %></li>
             </ul>
           </nav>
-        </div>
       </div>
     </header>
+
+    <div class='container-fluid'>
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+    </div>
 
     <div class="container-fluid">
       <%= yield %>
