implements Program register flow.

--- a/app/views/programs/new.html.erb
+++ b/app/views/programs/new.html.erb
@@ -8,6 +8,9 @@
   <%= program.label :outline %>
   <%= program.text_field :outline %>
 
+  <%= program.label :git_url %>
+  <%= program.text_field :git_url %>
+
   <div style='margin-top: 20px;'>
     <%= program.submit "Create", class: "btn btn-large btn-primary" %>
   </div>
