--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag 'programs' %>
 
-<h1 style='margin-bottom: 40px;'><%= @program.label %></h1>
+<h1 style='margin-bottom: 40px;'><%= @program.name %></h1>
 
 <div class="tabbable">
   <ul class="nav nav-tabs">
