--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -7,7 +7,16 @@
   <table class='table table-striped'>
   <% @programs.each do |program| %>
     <tr>
-      <td><%= link_to program.name, program_path(program.id) %> 
+      <td>
+        <%= link_to program.name, program_path(program.id) %> 
+        <%= link_to "delete", program, 
+          {
+            method: :delete, 
+            class: 'pull-right btn btn-small btn-warning',
+              data: { confirm: "You sure?"}
+            }
+        %>
+      </td>
     </tr>
   <% end %>
   </table>
