--- a/app/views/programs/file_browse.html.erb
+++ b/app/views/programs/file_browse.html.erb
@@ -1,13 +1,6 @@
 <%= javascript_include_tag 'programs' %>
 
-<h1 style='margin-bottom: 40px;'><%= @program.label %></h1>
-
-<div class="tabbable">
-  <ul class="nav nav-tabs">
-    <li><%= link_to 'outline', '/programs/' + @program.id.to_s %></li>
-    <li class='active'><%= link_to 'file browse', '/programs/file_browse/' + @program.id.to_s %></li>
-  </ul>
-</div>
+<%= render 'header' %>
 
 <div class='row-fluid' >
 
