--- a/app/views/programs/file_browse.html.erb
+++ b/app/views/programs/file_browse.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_include_tag 'programs' %>
 
-<%= render 'header' %>
+<%= render partial: 'header', locals: {program: @program} %>
 
 <div class='row-fluid' >
 
