implements Memo CRUD

--- a/app/assets/stylesheets/memos.css.scss
+++ b/app/assets/stylesheets/memos.css.scss
@@ -1,3 +1,34 @@
-// Place all the styles related to the memos controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+#memo_create_dialog {
+  textarea {
+    width: 98%;
+    height: 200px;
+  }
+}
+.memos {
+  width: 420px;
+}
+
+.memo {
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+
+  border-radius: 5px;
+}
+
+.memo_header {
+  padding: 3px 6px;
+  font-size: 11px;
+  background: #e2fbfc;
+}
+
+.memo_content {
+  padding: 10px;
+}
+
+.memo_content_edit {
+  width: 380px;
+}
+.memo_edit_area {
+  padding: 10px;
+}
