--- a/app/views/memos/_create_dialog.html.erb
+++ b/app/views/memos/_create_dialog.html.erb
@@ -12,8 +12,8 @@
                 <textarea id='memo_content'></textarea>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
-                <button type="button" class="btn btn-primary" id="memo_create_btn" subject_id="<%= subject.id %>">保存</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="memo_create_btn" subject_id="<%= subject.id %>">Save</button>
             </div>
         </div>
     </div>
