--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -4,12 +4,38 @@
 
 <h2><%= @subject.name %></h2>
 
-<%= link_to 'create new Memo', "#", {class: 'btn btn-primary memo_create_dialog_open_btn'} %>
+<div style='margin-bottom: 20px;'>
+  <%= link_to 'create new Memo', "#", {class: 'btn btn-primary memo_create_dialog_open_btn'} %>
+</div>
+
 
 <% if @subject.memos %>
-  <% @subject.memos.each do |memo| %>
-    <%= memo.content + ", " %>
-  <% end %>
+  <div class='memos'>
+    <% @subject.memos.each do |memo| %>
+      <div class='memo' id='memo_<%= memo.id %>'>
+        <div class='memo_header'>
+          <%= memo.updated_at %>
+          <div class='pull-right'>
+            <i class="icon-pencil memo_edit_area_open_btn" memo_id='<%= memo.id %>'></i>
+          </div>
+        </div>
+        <div class='memo_content'><%= simple_format h(memo.content) %></div>
+        <div class='memo_edit_area clearfix' style='display: none;'>
+          <textarea class='memo_content_edit'><%= memo.content %></textarea>
+          <div class='memo_edit_area_footer'>
+           <div class='pull-left'>
+              <a href='#' class='btn btn-warning memo_delete_btn' memo_id='<%= memo.id %>'>delete</a>
+            </div>
+            <div class='pull-right'>
+              <a href='#' class='btn memo_edit_area_close_btn' memo_id='<%= memo.id %>'>cancel</a>
+              <a href='#' class='btn btn-info memo_update_btn' memo_id='<%= memo.id %>'>update</a>
+            </div>
+           
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <% end %>
 
 <%= render partial: '/memos/create_dialog', locals: {subject: @subject} %>
