--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, "Program Browser" %>
+<% provide :title, "ProBro" %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,13 +11,6 @@
     <header class="navbar navbar-inverse">
       <div class="navbar-inner">
           <%= link_to yield(:title), '/', id: "logo" %>
-          <nav>
-            <ul class="nav pull-right">
-              <li><%= link_to "Home",    '/' %></li>
-              <li><%= link_to "Help",    '#' %></li>
-              <li><%= link_to "Sign in", '#' %></li>
-            </ul>
-          </nav>
       </div>
     </header>
 
