--- a/app/views/programs/_header.html.erb
+++ b/app/views/programs/_header.html.erb
@@ -1,16 +1,12 @@
-<h1 style='margin-bottom: 40px;'><%= program.name %></h1>
+<h1 style='margin-bottom: 20px;'><%= program.name %></h1>
 
 <div class="tabbable">
   <ul class="nav nav-tabs">
     <li
-      <%= "class='active'".html_safe if controller_name == 'programs' && action_name == 'show' %>
-      ><%= link_to 'outline', '/programs/' + program.id.to_s %></li>
+      <%= "class='active'".html_safe if @active_tab == :home %>
+      ><%= link_to 'Home', '/programs/' + program.id.to_s %></li>
     <li
-      <%= "class='active'".html_safe if action_name == 'file_browse' %>
-      ><%= link_to 'file browse', '/programs/file_browse/' + program.id.to_s %></li>
-
-    <li
-      <%= "class='active'".html_safe if controller_name == 'subjects' %>
-      ><%= link_to 'subjects', '/programs/' + program.id.to_s + '/subjects' %></li>
+      <%= "class='active'".html_safe if @active_tab == :code %>
+      ><%= link_to 'Code', '/programs/file_browse/' + program.id.to_s %></li>
   </ul>
 </div>
