--- a/app/views/subjects/_header.html.erb
+++ b/app/views/subjects/_header.html.erb
@@ -15,6 +15,6 @@
 
     <li
       <%= "class='active'".html_safe if action_name == 'show' %>
-      ><%= link_to 'memos', '/subjects/' + subject.id.to_s %></li>
+      ><%= link_to 'memos', program_subject_path(@subject.program.id, @subject.id) %></li>
   </ul>
 </div>
