refactor around routes.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,9 +18,13 @@
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 20px;
   margin-top: 10px;
   line-height: 18px;
+}
+
+h2 {
+  font-size: 18px;
 }
 
 .list-table{
