arrangement Code design.

--- a/app/assets/stylesheets/memos.css.scss
+++ b/app/assets/stylesheets/memos.css.scss
@@ -19,7 +19,7 @@
 .memo_header {
   padding: 3px 6px;
   font-size: 11px;
-  background: #e2fbfc;
+  background: $light_blue_color;
 }
 
 .memo_content {
