--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -20,13 +20,31 @@
 }
 
 h1 {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-width: 1px 0 1px 0;
+
   font-size: 20px;
   margin-top: 10px;
-  line-height: 18px;
+  line-height: 20px;
+  font-weight: normal;
+  background: #fafafa;
+
+  a {
+    color: $main_font_color;
+  }
 }
 
 h2 {
-  font-size: 18px;
+  padding: 4px 0 4px 10px;
+  border-left: 4px double #ddd;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: normal;
+
+  a {
+    color: $main_font_color;
+  }
 }
 
 .list-table{
