--- a/app/views/subjects/_header.html.erb
+++ b/app/views/subjects/_header.html.erb
@@ -1,20 +1,21 @@
-<div class='clearfix' style='margin-bottom: 30px;'>
-<h1 class='pull-left'>
+<div class='clearfix' style='margin-bottom: 20px;'>
+  <h1 style='margin-bottom: 14px;'>
     <%= link_to @subject.program.name, @subject.program %>
   </h1>
-  <span class='pull-left' style='font-size: 24px; padding-top: 20px; margin: 0 20px;'> > </span>
-  <h2 class='pull-left'><%= link_to @subject.name, @subject %></h2>
+  <h2><%= link_to @subject.name, @subject %></h2>
 </div>
 
 
 <div class="tabbable">
   <ul class="nav nav-tabs">
-    <li
-      <%= "class='active'".html_safe if action_name == 'file_browse' %>
-      ><%= link_to 'file browse', file_browse_subject_path(subject) %></li>
 
     <li
       <%= "class='active'".html_safe if action_name == 'show' %>
       ><%= link_to 'memos', @subject %></li>
+
+    <li
+      <%= "class='active'".html_safe if action_name == 'file_browse' %>
+      ><%= link_to 'file browse', file_browse_subject_path(subject) %></li>
+    
   </ul>
 </div>
