--- a/app/views/subjects/file_browse.html.erb
+++ b/app/views/subjects/file_browse.html.erb
@@ -2,22 +2,25 @@
   subject = <%= raw @subject.to_json %>;
 <% end %>
 
+<%= javascript_include_tag 'programs' %>
 <%= javascript_include_tag 'subjects_program_files' %>
 
 <%= render partial: 'header', locals: {subject: @subject} %>
 
-<div class='row-fluid' >
-
-  <div id="files" class='span6' style='background: #eee;'>
-    <ul style='padding: 10px;'>
-    <% @subject.program.top_level_files.each do |program_file| %>
-      <%= output_file_tree(program_file, :checkbox) %>
-    <% end %>
-    </ul>
+<div class='clearfix' >
+  <div id='files_container'>
+    <div id="files" >
+      <ul>
+      <% @subject.program.top_level_files.each do |program_file| %>
+        <%= output_file_tree(program_file, :checkbox) %>
+      <% end %>
+      </ul>
+    </div>
   </div>
 
-  <div class='span5' style='background: #ddd;'>
-    <div id='file_contents' class='pygments'></div>
+  <div id='file_contents_container'>
+    <div id='file_contents' class='pygments'>
+    </div>
   </div>
 
 </div>
