--- a/app/views/programs/file_browse.html.erb
+++ b/app/views/programs/file_browse.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div id='file_contents_container'>
-    <div id='file_contents' class='pygments'>
+    <div id='file_contents' class='codehilite'>
     </div>
   </div>
 
