--- a/app/assets/stylesheets/programs.css.scss
+++ b/app/assets/stylesheets/programs.css.scss
@@ -59,7 +59,7 @@
 
   border-radius: 5px;
   padding: 6px;
-  background: #fff;
+  background: $dark_blue_color;
   border: 1px solid #eee;
 
   pre {
