--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <header class="navbar navbar-inverse">
+    <header class="navbar">
       <div class="navbar-inner">
           <%= link_to yield(:title), '/', id: "logo" %>
       </div>
