--- a/app/views/subjects/select_files.html.erb
+++ b/app/views/subjects/select_files.html.erb
@@ -2,14 +2,16 @@
   subject = <%= raw @subject.to_json %>;
 <% end %>
 
+<%= javascript_include_tag 'program_file_viewer' %>
 <%= javascript_include_tag 'programs' %>
 <%= javascript_include_tag 'subjects_program_files' %>
 
 <%= render partial: 'header', locals: {subject: @subject} %>
 
 <div class='clearfix' >
-  <div id='files_container'>
-    <div id="files" >
+
+  <div id='program_files_container'>
+    <div id="program_files" >
       <ul>
       <% @subject.program.top_level_files.each do |program_file| %>
         <%= output_file_tree(program_file, :checkbox) %>
@@ -18,9 +20,8 @@
     </div>
   </div>
 
-  <div id='file_contents_container'>
-    <div id='file_contents' class='codehilite'>
-    </div>
+  <div id='program_file_viewer_container'>
+    <%= render partial: '/programs/program_file_viewer' %>
   </div>
 
 </div>
